--- a/activities.css
+++ b/activities.css
@@ -1,96 +1,214 @@
 .header{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
+.logo{
+  display: flex;
+}
+.nav{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  flex-direction: row;
+
+}
+.main-button-img:hover{
+  transform: scale(1.1);
+  transform: translateY(-20px);
+  cursor: pointer;
+}
+.main-button-img{
+  transition: scale 0.4s ease-in-out 0.2s, translate 0.4s ease-in-out 0.2s;
+}
+.text{
+  margin-left: 25px;
+  margin-right: 25px;
+  font-family: Roboto, Arial;
+  font-size: 20px;
+  transition: all .4s ease-in-out;
+  padding: 10px 10px 20px 10px;
+  margin-bottom: 0px;
+}
+.text:hover{
+  color: white;
+  background-color: black;
+  cursor: pointer;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.line{
+  margin-top: 0px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.hero{
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.frame33{
+  position: absolute;
+  top: 450px;
+  right: 30px;
+  transform: translateY(0px);
+  transition: transform 0.4s ease-in-out;
+}
+.frame33:hover{
+  transform: translateY(-30px);
+}
+.background{
+  transform: scale(1);
+  transition: transform 0.4s ease-in-out;
+}
+.background:hover{
+  transform: scale(1.2);
+}
+.main{
+  position: relative;
+  display: flex;
+}
+.snorkling{
+  position: absolute;
+  top: 100px;
+  left: 150px;
+}
+.frame32{
+  position: absolute;
+  top: 700px;
+  left: 175px;
+  transform: translateY(0px);
+  transition: transform 0.4s ease-in-out;
+}
+.frame32:hover{
+  transform: translateY(-30px);
+}
+.air-balloon{
+  position: absolute;
+  top:100px;
+  right: 150px;
+}
+.wind-surfing{
+  position: absolute;
+  top: 700px;
+  left: 150px;
   
+}
+.diving{
+  position: absolute;
+  top: 700px;
+  right: 150px ;
+}
+.safari{
+  position: absolute;
+  top: 1300px;
+  right:150px;
+  width: 35%;
+}
+.hiking{
+  position: absolute;
+  top: 1300px;
+  left: 150px;
+  width: 35%;
+}
+.background-main{
+  position: absolute;
+  top: 1800px;
+  width: 100%;
+}
+.footer-background{
+  position: absolute;
+  bottom:0;
+
+}
+a{
+  text-decoration: none;
+  color: black;
+}
+a:visited{
+  text-decoration: none;
+  color: black;
+}
+a:hover{
+  text-decoration: none;
+  color: black;
+}
+@keyframes appear {
+  from{
+      opacity: 0;
+      transform: scale(0.5);
   }
-  .logo{
-    display: flex;
+  to{
+      opacity: 1;
+      transform: scale(1);
   }
-  .nav{
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    flex-direction: row;
+}
+#hidden{
+  animation: appear 5s linear;
+  animation-timeline: view();
+  animation-range: entry 0 cover 40%;
+}
+@keyframes load {
+  from{
+      opacity: 0.5;
+      transform: translateY(100px);
+  }
+  to{
+      opacity: 1;
+      transform: translateY(0px);
+  }
+}
+#load{
+  animation: load 1s alternate;
+}
+body{
+  padding: 0;
+}
+#pre-load{
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  background-color: #FFFCFC;
+  display: flex;
+  top: 0px;
+}
+.plane{
+  top: 400px;
+  animation: loading 2s ease-in-out infinite, logo 2s ease-in-out infinite;
+  left: 550px;
+  position: absolute;
+}
+.pre-logo{
+  top: 150px;
+  left: 450px;
+  position: absolute;
+  animation: logo 2s ease-in-out infinite;
+}
+@keyframes loading {
+  from{
+      transform: translate(0px,0px);
+      
+  }
+  to{
+      transform: translate(200px,-140px);
+  }
+}
+@keyframes logo {
+  from{
+      opacity: 0.5;
+  }
+  to{
+      opacity: 1;
+  }
   
-  }
-  .text{
-    margin-left: 25px;
-    margin-right: 25px;
-    font-family: Roboto, Arial;
-    font-size: 20px;
-  }
-  .line{
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-  }
-  .hero{
-    position: relative;
-    display: flex;
-  }
-  .frame33{
-    position: absolute;
-    top: 450px;
-    right: 30px;
-    
-  }
-  .main{
-    position: relative;
-    display: flex;
-  }
-  .snorkling{
-    position: absolute;
-    top: 100px;
-    left: 150px;
-  }
-  .frame32{
-    position: absolute;
-    top: 700px;
-    left: 175px;
-  }
-  .air-balloon{
-    position: absolute;
-    top:100px;
-    right: 150px;
-  }
-  .wind-surfing{
-    position: absolute;
-    top: 700px;
-    left: 150px;
-    
-  }
-  .diving{
-    position: absolute;
-    top: 700px;
-    right: 150px ;
-  }
-  .safari{
-    position: absolute;
-    top: 1300px;
-    right:150px;
-    width: 35%;
-  }
-  .hiking{
-    position: absolute;
-    top: 1300px;
-    left: 150px;
-    width: 35%;
-  }
-  .background-main{
-    position: absolute;
-    top: 1800px;
-    width: 100%;
-  }
-  .footer-background{
-    position: absolute;
-    bottom:0;
-  
-  }
+}
