--- a/home.css
+++ b/home.css
@@ -9,7 +9,17 @@
     justify-content: space-between;
     padding-left: 20px;
     padding-right: 20px;
-
+    animation: load 1s alternate;
+}
+@keyframes load{
+    from{
+        opacity: 0.5;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
 .main-button-img:hover{
     transform: scale(1.1);
@@ -27,7 +37,7 @@
     justify-content: center;
     margin-top: 100px;
     flex-direction: row;
-
+    animation: load 1s alternate;
 }
 .text{
     margin-left: 25px;
@@ -50,11 +60,13 @@
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    animation: load 1s alternate;
 }
 .main{
     margin-top: 20px;
     position: relative;
     display: flex;
+    animation: load 1s alternate;
 }
 .hero{
     position: absolute;
@@ -326,7 +338,73 @@
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .footer-para2{
-    bottom: 50px;
+    bottom: 290px;
     left: 600px;
     position: absolute;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+a:visited{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    text-decoration: none;
+    color: black;
+}
+@keyframes appear {
+    from{
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+#hidden{
+    animation: appear 5s linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 40%;
+}
+#pre-load{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    background-color: #FFFCFC;
+    display: flex;
+    top: 0px;
+}
+.plane{
+    top: 400px;
+    animation: loading 2s ease-in-out infinite, logo 2s ease-in-out infinite;
+    left: 550px;
+    position: absolute;
+}
+.pre-logo{
+    top: 150px;
+    left: 450px;
+    position: absolute;
+    animation: logo 2s ease-in-out infinite;
+}
+@keyframes loading {
+    from{
+        transform: translate(0px,0px);
+        
+    }
+    to{
+        transform: translate(200px,-140px);
+    }
+}
+@keyframes logo {
+    from{
+        opacity: 0.5;
+    }
+    to{
+        opacity: 1;
+    }
+    
 }
