--- a/package.css
+++ b/package.css
@@ -21,14 +21,113 @@
     flex-direction: row;
 
 }
+
+.line{
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.text:hover{
+    color: white;
+    background-color: black;
+    cursor: pointer;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.main-button-img:hover{
+    transform: scale(1.1);
+    transform: translateY(-20px);
+    cursor: pointer;
+}
 .text{
     margin-left: 25px;
     margin-right: 25px;
     font-family: Roboto, Arial;
     font-size: 20px;
+    transition: all .4s ease-in-out;
+    padding: 10px 10px 20px 10px;
+    margin-bottom: 0px;
 }
-.line{
-    margin-top: 20px;
+.main-button-img{
+    transition: scale 0.4s ease-in-out 0.2s, translate 0.4s ease-in-out 0.2s;
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+a:visited{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    text-decoration: none;
+    color: black;
+}
+.img1{
+    left: 180px;
+    top: 150px;
+    position: absolute;
+}
+.img2{
+    left: 400px;
+    top: 500px;
+    position: absolute;
+}
+.content{
+    position: relative;
     display: flex;
-    justify-content: center;
+    padding-bottom: 300px;
+}
+@keyframes load{
+    from{
+        opacity: 0.5;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+#load{
+    animation: load 1s alternate;
+}
+#pre-load{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    background-color: #FFFCFC;
+    display: flex;
+    top: 0px;
+}
+.plane{
+    top: 400px;
+    animation: loading 2s ease-in-out infinite, logo 2s ease-in-out infinite;
+    left: 550px;
+    position: absolute;
+}
+.pre-logo{
+    top: 150px;
+    left: 450px;
+    position: absolute;
+    animation: logo 2s ease-in-out infinite;
+}
+@keyframes loading {
+    from{
+        transform: translate(0px,0px);
+        
+    }
+    to{
+        transform: translate(200px,-140px);
+    }
+}
+@keyframes logo {
+    from{
+        opacity: 0.5;
+    }
+    to{
+        opacity: 1;
+    }
+    
 }
